src/HealthChecksDemo/aspnetcore-healthchecks-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnetcore-healthchecks
  namespace: dotnet-apps
  labels:
    tag: "aspnetcore-healthchecks"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: aspnetcore-healthchecks
