src/HealthChecksDemo/aspnetcore-healthchecks-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aspnetcore-healthchecks-ingress
  namespace: dotnet-apps
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 30s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 20s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 20s
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: aspnetcore-healthchecks
          servicePort: 80
